fixed an issue with centering and a gap at the bottom of mobile view

--- a/src/index.css
+++ b/src/index.css
@@ -14,8 +14,6 @@
 
   .main-container {
     flex-direction: column;
-    align-items: center;
-    padding: 20px;
     width: 100%;
   }
 
